Fixing layout bugs and add box of comments

--- a/src/app/article/article-comment-list/article-comment-list.component.scss
+++ b/src/app/article/article-comment-list/article-comment-list.component.scss
@@ -36,17 +36,44 @@ section {
 
   .comments-list-container {
     padding-left: 220px;
+    padding-right: 220px;
     padding-bottom: 100px;
 
     @media only screen and (max-width: 1279px) {
       padding: 0;
-      padding-bottom: 0px;
+      padding-bottom: si0px;
     }
 
     ul {
+      list-style-type: none;
+      padding-bottom: 67px;
+      border-width: 1px;
+      width: 1330px;
+      margin-left: 33px;
+      padding-left: 30px;
+      padding-right: 139px;
+
+      @media only screen and (max-width: 1279px) {
+        padding-left: 0;
+        padding-right: 0;
+        margin-left: 0 !important;
+        margin-right: 0;
+        width: auto;
+      }
+
       li {
+        @media only screen and (max-width: 1279px) {
+          padding-left: 40px;
+          margin-left: 0px;
+        }
+
         list-style-type: none;
-        margin-bottom: 100px;
+
+        padding-bottom: 67px;
+        border-width: 1px;
+        width: 100% !important;
+        margin-left: 33px;
+        padding-left: 30px;
 
         span {
           text-transform: uppercase;
@@ -67,7 +94,11 @@ section {
 }
 
 .silver-line {
-  border-bottom: solid 2px var(--cream);
+  border-bottom: solid 2px var(--cream) !important;
+
+  @media only screen and (max-width: 1279px) {
+    border-width: 100%;
+  }
 }
 
 .user-avatar {
@@ -78,6 +109,4 @@ section {
   width: 80px;
   height: 77px;
   margin-right: 30px;
-
-
 }
